syntax = "proto3";

package org.shoplify.frontendservice;

option java_multiple_files = true;
option java_package = "org.shoplify.frontendservice";
option java_outer_classname = "FrontendService";

import "product_service.proto";

message ListCategoriesRequest{
  optional int64 user_id = 1;
}

message ListCategoriesResponse{
  optional org.shoplify.productservice.Category featured_category = 1;
  repeated org.shoplify.productservice.Category categories = 2;
}

message ListCartRequest{
  repeated CartItem items=1;
}

message CartItem{
  optional int64 quantity=1;
  optional int64 product_id=2;
}

message ListCartResponse{
  repeated DetailedCartCheckoutItem checkout_items=1;
  float sum_cost=2;
}

message DetailedCartCheckoutItem{
  optional org.shoplify.productservice.ProductItem item=1;
  optional float total_cost=2;
}

message GetShippingCostRequest{
  optional string country=1;
  optional string zip_code=2;
  optional float total_cost=3;
}

message GetShippingCostResponse{
  bool is_supported=1;
  float shipping_cost=2;
}



