syntax = "proto3";

package org.shoplify.userservice;

option java_multiple_files = true;
option java_package = "org.shoplify.userservice";
option java_outer_classname = "UserService";


message CreateUserRequest{
  enum UserType{
    UNKNOWN_USER_TYPE = 0;
    SELLER = 1;
    NORMAL = 2;
  }
  optional string email = 1;
  optional string password = 2;
  optional UserType type = 3;
}

message CreateUserResponse{
  optional string user_id = 1;
}

message GetUserRequest{
  optional int64 user_id = 1;
}

message GetUserResponse{
  optional string user_country = 1;
  optional string token = 2;
  optional string type=3;
}

message LoginUserRequest{
  optional string email = 1;
  optional string password = 2;
}

message LoginUserResponse{
  enum LoginStatus{
    UNKNOWN_LOGIN_STATUS = 0;
    SUCCESS = 1;
    DENIED_RISK_SUSPENDED = 2;
  }
  optional int64 user_id = 1;
  optional string token = 2;
  optional LoginStatus status = 3;
}
